# nt_qq_bot

./: Cargo.toml  kovi.conf.toml  kovi.plugin.toml  nohup.out
plugins/base/: Cargo.toml
plugins/base/src/: lib.rs
plugins/deepseek/: Cargo.toml
plugins/deepseek/src/: lib.rs
plugins/history-book/: Cargo.toml
plugins/history-book/src/: lib.rs
plugins/taro/: Cargo.toml
plugins/taro/src/: lib.rs
src/: main.rs
