[package]
name = "my-kovi-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base = { version = "0.1.0", path = "plugins/base" }
kovi = "0.11.7"
base64 = "0.13"
deepseek = { version = "0.1.0", path = "plugins/deepseek" }
taro = { version = "0.1.0", path = "plugins/taro" }
kovi-plugin-shindan-maker = "0.1.7"
rand = "0.9.0"

[workspace]
members = [ "plugins/base", "plugins/deepseek", "plugins/taro"]

[workspace.dependencies]
kovi = "0.11.7"
